src/test/deca/syntax/invalid/created/bloc_alone/if_alone.deca
// Description:
//  	Utilisant identifiant de bloc seul
// Resultats :
// 	Ligne 7 : mismatched input ';' expecting '('

{
	if;
}
